Improve logging when timing. Replace calls to Collections.* with appropriate java-9 calls.